Fixed responsive on tablet size

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,11 +2,7 @@
 @import '~/sass/utilities/mixins';
 
 .header {
-  @include flex-box(
-    $direction: row,
-    $justify-content: space-between,
-    $align-items: center
-  );
+  @include flex-box($justify-content: space-between, $align-items: center);
 
   height: $height-header-footer;
   margin: auto;
@@ -17,23 +13,23 @@
   z-index: 10;
 
   .logo {
-    @include flex-box(
-      $direction: row,
-      $justify-content: center,
-      $align-items: center
-    );
+    @include flex-box($justify-content: center, $align-items: center);
 
     column-gap: $spacer-xxxs;
     text-decoration: none;
 
     &__image {
+      flex-shrink: 0;
       width: to-rem(38);
     }
 
     &__text {
+      @include tablet-breakpoint {
+        // width: 100px;
+      }
+
       color: $header-clr;
       font-weight: $font-weight-bold;
-      margin-left: to-rem(20);
     }
 
     &:focus-visible {
@@ -51,6 +47,8 @@
       $justify-content: center,
       $align-items: center
     );
+
+    white-space: nowrap;
 
     &__academies {
       @include flex-box(
